--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                         <div class="xp-header">
                             <h3>Rise Of Forggoten Kingdom (IN DEV)</h3>
                         </div>
-                        <span class="role">Moderator</span>
+                        <span class="role senior">Senior Moderator</span>
                         <ul>
-                            <li>Vigilância ativa e controle de contenção.</li>
+                            <li>Liderando a moderação do servidor.</li>
                             <li>Manutenção pesada da ordem no servidor.</li>
                         </ul>
                     </div>
@@ -123,8 +123,8 @@
                         </div>
                         <span class="role">Moderator</span>
                         <ul>
-                            <li>Vigilância ativa e controle de contenção.</li>
-                            <li>Manutenção pesada da ordem no servidor.</li>
+                            <li>Vigiando e punindo infrações de regras.</li>
+                            <li>Cuidando de logs e auxiliando em decisões de moderação.</li>
                         </ul>
                     </div>
 
@@ -132,10 +132,10 @@
                         <div class="xp-header">
                             <h3>Anime Auras</h3>
                         </div>
-                        <span class="role">Moderator</span>
+                        <span class="role">Trial Moderator</span>
                         <ul>
-                            <li>Vigilância ativa e controle de contenção.</li>
-                            <li>Manutenção pesada da ordem no servidor.</li>
+                            <li>Iniciando na moderação do servidor.</li>
+                            <li>Cuidando de tickets e reportes.</li>
                         </ul>
                     </div>
 
