--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Osein | Elite Discord Staff</title>
+    <title>oSein | Elite Discord Staff</title>
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <div class="site-wrapper">
         <nav class="navbar">
-            <div class="brand">OSEIN<span>.MOD</span></div>
+            <div class="brand">oSein<span>.MOD</span></div>
             <a href="#contato" class="connect-btn">Conectar</a>
         </nav>
 
@@ -142,10 +142,17 @@
             </section>
         </main>
 
-        <footer id="contato" class="footer-section">
-            <h2>Pronto para estabelecer a ordem na sua comunidade?</h2>
-            <a href="https://discord.com/users/1077000858342006867" class="discord-btn">Convocar Osein</a>
-        </footer>
+        <footer id="contato" class="footer-section" style="position: relative; z-index: 50;">
+    <h2>Pronto para estabelecer a ordem na sua comunidade?</h2>
+    
+    <a href="https://discord.com/users/1077000858342006867" 
+       target="_blank" 
+       class="discord-btn" 
+       style="position: relative; z-index: 100; pointer-events: auto; display: inline-block;"
+       onclick="window.open(this.href, '_blank'); return false;">
+       Convocar oSein
+    </a>
+    </footer>
     </div>
     <script src="script/main.js"></script>
 </body>
