--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <img src="assets/AL.webp" alt="Anime All Logo" class="server-logo">
                         <div class="server-info">
                             <h3 class="server-name">Anime All</h3>
-                            <span class="badge-role badge-admin">Moderator</span>
+                            <span class="badge-role badge-mod">Moderator</span>
                         </div>
                     </div>
                     <div class="server-stats">
@@ -139,7 +139,7 @@
                         <img src="assets/FK.webp" alt="Rise Of Forggoten Kingdom" class="server-logo">
                         <div class="server-info">
                             <h3 class="server-name">Rise Of Forggoten Kingdom (IN DEV)</h3>
-                            <span class="badge-role badge-mod">Senior Moderator</span>
+                            <span class="badge-role badge-admin">Senior Moderator</span>
                         </div>
                     </div>
                     <div class="server-stats">
